# OCCT-Light.gd-autowrapper

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  docker-compose.yml  generate.sh  pyproject.toml
demo/tests/: index.gd  (+29 more)
doc_classes/: OcctlAabb3.xml  OcctlAxis1Placement.xml  OcctlAxis2Placement.xml  OcctlAxis2Placement2d.xml  OcctlAxis3Placement.xml  OcctlBool.xml  OcctlBoolOptions.xml  OcctlByteArray.xml  OcctlCoedgeView.xml  OcctlColorRgba.xml  OcctlCompoundView.xml  OcctlCore.xml  OcctlCurve2dBezierCreateInfo.xml  OcctlCurve2dBlendArcInfo.xml  OcctlCurve2dBspline.xml  OcctlCurve2dBsplineCreateInfo.xml  OcctlCurve2dCircleTangentCenterOnCurveInfo.xml  OcctlCurve2dCircleTangentFixedCenterInfo.xml  OcctlCurve2dCircleTangentOnCurveRadiusInfo.xml  OcctlCurve2dCircleTangentToThreeInfo.xml  OcctlCurve2dCircleTangentToTwoRadiusInfo.xml  OcctlCurve2dLineTangentThroughPointInfo.xml  OcctlCurve2dLineTangentToTwoInfo.xml  OcctlCurve2dLineTangentWithAngleInfo.xml  OcctlCurve2dOffsetCreateInfo.xml  OcctlCurveAirfoilNaca4Info.xml  OcctlCurveApproximatedInfo.xml  OcctlCurveBezierCreateInfo.xml  OcctlCurveBezierSegmentsOptions.xml  OcctlCurveBspline.xml  OcctlCurveBsplineCreateInfo.xml  OcctlCurveInterpolatedInfo.xml  OcctlCurveIntersectionPoint.xml  OcctlCurveOffsetCreateInfo.xml  OcctlCurveTrimmedCreateInfo.xml  OcctlCurves.xml  OcctlCurves2d.xml  OcctlCurvesCommon.xml  OcctlDe.xml  OcctlDeFormatInfo.xml  (+244 more)
src/: analyze_dag.py  gen_docs.py  gen_handles.py  gen_module.py  gen_out_prim.py  gen_tests.py  gen_values.py  gen_wrapper.py  main.py  parser.py  type_map.py
(+608 files in other folders)
